[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yelp-business-analyzer"
version = "0.1.0"
description = "Python SDK for the Yelp Business Analyzer Apify actor — real-time ratings, structured hours, website tech stack, listing age & chain detection for any Yelp business."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ApiVault Labs" }]
keywords = [
    "yelp", "yelp-scraper", "yelp-api", "yelp-business-analyzer",
    "yelp-ratings", "yelp-hours", "yelp-tech-stack", "yelp-fusion-alternative",
    "local-business-intelligence", "local-lead-generation",
    "restaurant-analytics", "business-hours-api", "is-open-now",
    "chain-detection", "popularity-score",
    "web-scraping", "apify", "apify-actor", "python-sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apivault-labs/yelp-business-analyzer-python"
Documentation = "https://github.com/apivault-labs/yelp-business-analyzer-python#readme"
"Apify Actor" = "https://apify.com/apivault_labs/yelp-business-scraper"
"Bug Tracker" = "https://github.com/apivault-labs/yelp-business-analyzer-python/issues"

[tool.setuptools.packages.find]
include = ["yelp_analyzer*"]
